<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddRecipeActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="0dp" android:id="@+id/etRecipeName"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                tools:layout_editor_absoluteY="1dp" tools:layout_editor_absoluteX="0dp"
                android:id="@+id/etIngredient1"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                tools:layout_editor_absoluteY="1dp" tools:layout_editor_absoluteX="0dp"
                android:id="@+id/etIngredient2"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                tools:layout_editor_absoluteY="1dp" tools:layout_editor_absoluteX="0dp"
                android:id="@+id/etIngredient3"/>
        <Button
                android:text="ADD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="288dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/btnAddRecipe"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>